--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -2,7 +2,7 @@ name: Development Build
 
 on:
   push:
-    branches: [ NUM-17-github-action-to-build-push-to-dockerhub ]
+    branches: [ master ]
 
 jobs:
   builds:
