--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -33,3 +33,12 @@ jobs:
         --cluster ${{ secrets.ECS_CLUSTER_ARN }} \
         --service ${{ secrets.ECS_SERVICE_ARN }} \
         --force-new-deployment
+
+    - name: Slack Notification
+      uses: rtCamp/action-slack-notify@v2.0.2
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_COLOR: '#3278BD'
+        SLACK_MESSAGE: 'Dominion Record Backend Deployed to Dev Account'
+        SLACK_USERNAME: 'deployBot'
+        SLACK_ICON_EMOJI: ':white_check_mark:'
